syntax = "proto3";

package yandex.cloud.priv.gitlab.v1;

import "yandex/cloud/priv/validation.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/gitlab/v1;gitlab";
option java_outer_classname = "PGDF";

message FormSpecRequest {
}

enum ItemType {
  ITEM_TYPE_UNSPECIFIED = 0;
  OBJECT = 1;
  ARRAY = 2;
  BOOLEAN = 3;
  NUMBER = 4;
  STRING = 5;
}
enum ViewSpecLayout {
  VIEW_SPEC_LAYOUT_UNSPECIFIED = 0;
  ROW = 1;
  TABLE_ITEM = 4;
  TRANSPARENT = 5;
  ACCORDEON = 2;
  SECTION = 3;
  SECTION2 = 6;
  GROUP = 7;
  GROUP2 = 8;
}
enum NumberFormat {
  NUMBER_FORMAT_UNSPECIFIED = 0;
  INT64 = 1;
  FLOAT = 2;
}
message Item {
  ItemType type = 1;
  ViewSpec view_spec = 2;
  bool required = 3;
  string validator = 14;
  map<string,Item> properties = 4;
  Item items = 5;
  repeated string enum = 6;
  map<string,string> description = 7;
  NumberFormat format = 8;
  double minimum = 9;
  double maximum = 10;
  string pattern = 11;
  int64 min_length = 12;
  int64 max_length = 13;
}
message ViewSpec {
  string type = 1;
  ViewSpecLayout layout = 2;
  bool layout_open = 10;
  bool disabled = 3;
  string layout_title = 4;
  string layout_description = 5;
  string item_label = 6;
  repeated ViewTableCell table = 7;
  repeated string order = 8;
}
message ViewTableCell {
  string label = 1;
  string property = 2;
}

message FormValuesRequest{
  string instance_id = 1 [(yandex.cloud.priv.required) = true, (yandex.cloud.priv.length) = "<=50"];
}

message FormValuesResponse{
  repeated Provider providers = 1;
}

message UpdateFormValuesRequest{
  string instance_id = 1 [(yandex.cloud.priv.required) = true, (yandex.cloud.priv.length) = "<=50"];
  repeated Provider providers = 2;
}

message UpdateFormValuesResponse{
  repeated Provider providers = 1;
}

message Provider {
  map<string, Params> data = 1;
}

message Params {
  string guid = 1 [(yandex.cloud.priv.required) = true, (yandex.cloud.priv.length) = "<=50"];
  map<string, string> properties = 2;
}
